--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^6.0.9",
     "nodemon": "^3.0.1"
   }
